# bc

./: .gitmodules  CMakeLists.txt  build.zig  build.zig.zon
bc/: CMakeLists.txt  Debug.hpp  File.hpp  Lock.cpp  Memory.cpp  Memory.hpp  String.cpp  String.hpp  Thread.cpp  Unicode.cpp  Unicode.hpp
bc/file/: Close.cpp  Close.hpp  Copy.cpp  Copy.hpp  CreateDirectory.cpp  CreateDirectory.hpp  Defines.hpp  Delete.cpp  Delete.hpp  Error.cpp  Error.hpp  Exists.cpp  Exists.hpp  File.cpp  File.hpp  Filesystem.cpp  Filesystem.hpp  Flush.cpp  Flush.hpp  GetFileInfo.cpp  GetFileInfo.hpp  GetPos.cpp  GetPos.hpp  GetWorkingDirectory.cpp  GetWorkingDirectory.hpp  IsAbsolutePath.cpp  IsAbsolutePath.hpp  MakeAbsolutePath.cpp  MakeAbsolutePath.hpp  Move.cpp  Move.hpp  Open.cpp  Open.hpp  Path.cpp  Path.hpp  ProcessDirFast.cpp  ProcessDirFast.hpp  Read.cpp  Read.hpp  RemoveDirectory.cpp  (+12 more)
bc/file/path/: Path.cpp  Path.hpp  Posix.cpp  Posix.hpp
bc/memory/: Memory.cpp  Memory.hpp  Storm.cpp  Storm.hpp
bc/os/: CommandLine.cpp  CommandLine.hpp  File.cpp  File.hpp  Path.cpp  Path.hpp
bc/os/file/: CloseFile.cpp  CloseFile.hpp  CopyFile.cpp  CopyFile.hpp  CreateDirectory.cpp  CreateDirectory.hpp  CreateFile.cpp  (+35 more)
bc/string/: Append.cpp  Append.hpp  Copy.cpp  Copy.hpp  Defines.hpp  Equal.cpp  Equal.hpp  Find.cpp  Find.hpp  Format.cpp  Format.hpp  Length.cpp  Length.hpp  Memory.cpp  Memory.hpp  Path.cpp  Path.hpp  QuickFormat.hpp  QuickNativePath.hpp  Translate.cpp  Translate.hpp
bc/system/: System_Thread.cpp  System_Time.cpp
bc/time/: Time.cpp  Time.hpp  TimeConst.hpp  Types.hpp
(+19 files in other folders)
